# dyj_server

./: CMakeLists.txt  README.md  app  build.sh  main.c
html/: demo.html
include/: add.h  config.h  dyj_server.h  internet.h  threadPool.h  timer_task.h  utile.h  webserver.h
include/WebSocket/: WebSocketConnect.h  WebSocketProcessor.h
include/log/: system_log.h
include/request/: httpBody.h  httpHeadInformation.h  httpMapping.h  myMalloc.h  requestInfoOutout.h
include/response/: response.h  response_mapping.h
src/: add.c  internet.c  threadPool.c  timer_task.c  webserver.c
src/WebSocket/: WebSocketConnect.c  WebSocketProcessor.c
src/cjson/: cJSON.c
src/log/: respFile.c  system_log.c
src/request/: httpBody.c  httpHeadInformation.c  httpMapping.c  requestInfoOutout.c
src/response/: response.c  response_mapping.c
